[package]
name = "m_dll"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.9"
user32-sys = "*"
libc = "*"

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }