[package]
name = "m_dll"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["std", "everything"] }
user32-sys = "*"
libc = "*"
rand = "0.8.4"
getset = "0.1.0"

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]