[package]
name = "m_dll"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["std", "everything"] }
libc = "*"
rand = "0.8.4"
getset = "0.1.0"
ntapi = "0.3.6"
tokio = { version = "1.4.0", features = ["full"]}

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]