[package]
name = "dll2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["std", "everything"] }
ntapi = "0.3.6"
tokio = { version = "1.4.0", features = ["full"]}

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]